--- a/src/components/merchant-items-options/MerchantItemsOptionsComponent.css
+++ b/src/components/merchant-items-options/MerchantItemsOptionsComponent.css
@@ -2,15 +2,12 @@
 @import '../../assets/css/icon.css';
 @import '../../assets/css/sidebar.css';
 
-.merchant-items-option {
+.merchant-items-title {
   margin-top: 3rem;
-}
-
-.merchant-items-option:first-child {
-  margin-top: 0;
 }
 
 .merchant-items-options-save-button {
   display: flex;
   justify-content: right;
+  margin-top: 3rem;
 }
